# sigil

./: CMakeLists.txt  README.MD
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  app.cpp
src/engine/: CMakeLists.txt  engine.cpp
src/sigil/: CMakeLists.txt  sigil.cpp  sigil.hpp
